# clutch_chatbot

./: .env  README.md  pyproject.toml
data/: clutch_database.db
data/processed/: clients.parquet  questions.csv
data/raw/: Counter_no_stipulations.xml  HalQuestions_StatusOnly_Test.csv  declined.xml
notebooks/: Untitled.ipynb  data_manager.ipynb  just_a_draft.ipynb  test_for_chatbot_llm_model.ipynb  test_for_context_filter_llm_model.ipynb  test_for_sql_llm_model.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  data_manager-checkpoint.ipynb  test_for_context_filter_llm_model-checkpoint.ipynb
src/: chatbot_llm_model.py  context_filter_llm_model.py  sql_llm_model.py
